tests/error/iterate_error.bz
// error: unable to match type '[]' to non-typename type 'consteval [??: auto]'
// error: failed to resolve variable declaration
// note: while evaluating expression at compile time
// error: condition for static_assert must be a constant expression
consteval arr: [??: auto] = [
];

static_assert({
	for (const v in arr) {}
	true
});
